Add basic structure

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
   <script src="js/app.js"></script>
 </head>
 <body>
+  <h1>Shopping List</h1>
+  <h3>Enter item below and press enter</h3>
+  <div class="list">
+    <input type="text">
+  </div>
 </body>
 </html>
