--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
   <script src="js/app.js"></script>
 </head>
 <body>
   <h1>Shopping List</h1>
   <h3>Enter item below and press enter</h3>
   <input type="text">
-  <ul>
+  <ul class="sortable">
   </ul>
 </body>
 </html>
