Add more styling

--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
   <script src="js/app.js"></script>
 </head>
 <body>
-  <h1>Shopping List</h1>
-  <h3>Enter item below and press enter</h3>
-  <input type="text">
-  <ul class="sortable">
-  </ul>
+  <header>
+    <h1>Shopping List</h1>
+  </header>
+  <section>
+    <h3>Enter item below and press enter</h3>
+    <input type="text">
+    <ul class="sortable"></ul>
+  </section>
 </body>
 </html>
