Add reset button functionality

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <h3>Enter item below and press enter</h3>
     <input type="text">
     <ul class="sortable"></ul>
+    <button>Reset List</button>
   </section>
 </body>
 </html>
