Add icon next to title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Shopping List</title>
-  <link rel="icon" href="img/basket.svg">
+  <link rel="shortcut icon" href="img/basket.svg" type="image/x-icon">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
