--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Shopping List</title>
   <link rel="logo" type="image/svg" href="img/logo.svg">
+  <link rel="shortcut icon" href="img/favicon.png">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
