--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="shortcut icon" href="img/favicon.png">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400' 
+  rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Rancho' rel='stylesheet' 
+  type='text/css'>
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script src="http://code.jquery.com/ui/1.11.1/jquery-ui.min.js"></script>
   <script src="js/app.js"></script>
@@ -15,11 +19,14 @@
   <header>
     <h1>Shopping List</h1>
   </header>
-  <section>
-    <h3>Enter item below and press enter</h3>
-    <input type="text">
-    <ul class="sortable"></ul>
+  <aside>
+    <h2>To Do</h2>
+    <h2>Done</h2>
     <button>Reset List</button>
+  </aside>
+  <section>
+    <input type="text" value="Enter item and press enter">
+    <ul class="sortable"></ul>
   </section>
 </body>
 </html>
