Style for header

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 </head>
 <body>
   <header>
-    <img src="img/logo.svg">
-    <h1>Shopping List</h1>
+    <div class="logo-container">
+      <img src="img/logo.svg">
+      <h1>Shopping List</h1>
+    </div>
   </header>
   <aside>
     <h2>To Do</h2>
