Style for side bar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
   </header>
   <aside>
     <h2>To Do</h2>
+    <div>4</div>
     <h2>Done</h2>
+    <div>3</div>
+    <h2>Total</h2>
+    <div>7</div>
     <button>Reset List</button>
   </aside>
   <section>
